--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <td>SISWA</td>
         </tr>
         <tr>
-          <td>6</td>
+          <td>7</td>
           <td>RICKON STARK</td>
           <td>00522309523424</td>
           <td>LAKI-LAKI</td>
@@ -175,6 +175,107 @@
           <td>OLD GODS OF THE FOREST</td>
           <td>SEKOLAH MENENGAH PERTAMA</td>
           <td>SISWA</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="secondary-table" align="center" border="1" width="95%">
+      <thead>
+        <tr>
+          <th rowspan="2">No.</th>
+          <th rowspan="2">Status Pernikahan</th>
+          <th rowspan="2">Status Hubungan Dalam Keluarga</th>
+          <th rowspan="2">Kewarganegaraan</th>
+          <th colspan="2">Dokumen Imigrasi</th>
+          <th colspan="2">Nama Orang Tua</th>
+        </tr>
+        <tr>
+          <th>No. Paspor</th>
+          <th>No. KITAS/KITAP</th>
+          <th>Ayah</th>
+          <th>Ibu</th>
+        </tr>
+        <tr>
+          <th></th>
+          <th>(9)</th>
+          <th>(10)</th>
+          <th>(11)</th>
+          <th>(12)</th>
+          <th>(13)</th>
+          <th>(14)</th>
+          <th>(15)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>KAWIN</td>
+          <td>KEPALA KELUARGA</td>
+          <td>WNI</td>
+          <td>X245354</td>
+          <td>-</td>
+          <td>RICKARD STARK</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>KAWIN</td>
+          <td>ISTRI</td>
+          <td>WNI</td>
+          <td>X543489</td>
+          <td>-</td>
+          <td>HOSTER TULLY</td>
+          <td>MINISA TULLY</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>BELUM KAWIN</td>
+          <td>ANAK</td>
+          <td>WNI</td>
+          <td>X441541</td>
+          <td>-</td>
+          <td>EDDARD STARK</td>
+          <td>CATELYN STARK</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>BELUM KAWIN</td>
+          <td>ANAK</td>
+          <td>WNI</td>
+          <td>X347445</td>
+          <td>-</td>
+          <td>EDDARD STARK</td>
+          <td>CATELYN STARK</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>BELUM KAWIN</td>
+          <td>ANAK</td>
+          <td>WNI</td>
+          <td>X575952</td>
+          <td>-</td>
+          <td>EDDARD STARK</td>
+          <td>CATELYN STARK</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>BELUM KAWIN</td>
+          <td>ANAK</td>
+          <td>WNI</td>
+          <td>X341746</td>
+          <td>-</td>
+          <td>EDDARD STARK</td>
+          <td>CATELYN STARK</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>BELUM KAWIN</td>
+          <td>ANAK</td>
+          <td>WNI</td>
+          <td>X341521</td>
+          <td>-</td>
+          <td>EDDARD STARK</td>
+          <td>CATELYN STARK</td>
         </tr>
       </tbody>
     </table>
