--- a/index.html
+++ b/index.html
@@ -279,5 +279,65 @@
         </tr>
       </tbody>
     </table>
+
+    <footer>
+      <table class="penerbitan" height="100%">
+        <tr>
+          <td>Dikeluarkan Tanggal</td>
+          <td>:</td>
+          <td id="tanggal">02-05-317</td>
+        </tr>
+        <tr>
+          <td>LEMBAR</td>
+          <td>:</td>
+          <td>1. Kepala Keluarga</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td>2. RT</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td>3. Desa/Kelurahan</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td>4. Kecamatan</td>
+        </tr>
+      </table>
+
+      <table class="tandatangan">
+        <tr>
+          <td valign="top"><h6>KEPALA KELUARGA</h6></td>
+        </tr>
+        <tr>
+          <td valign="bottom">
+            <h6><u>EDDARD STARK</u></h6>
+          </td>
+        </tr>
+        <tr>
+          <td valign="top"><p>Tanda Tangan/Cap Jempol</p></td>
+        </tr>
+      </table>
+
+      <table class="stampel">
+        <tr>
+          <td valign="top">
+            <h6>KEPALA DINAS KEPENDUDUKAN DAN PENCATATAN SIPIL</h6>
+          </td>
+        </tr>
+        <tr>
+          <td valign="bottom">
+            <h6><u>Drs. H. STANNIS BARATHEON, M. Si.</u></h6>
+          </td>
+        </tr>
+        <tr>
+          <td valign="top"><p>NIP. 19263548631653215</p></td>
+        </tr>
+      </table>
+    </footer>
   </body>
 </html>
