fixing small things

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div class="center">
         <h1 style="font-size: 2.5rem">KARTU KELUARGA</h1>
-        <h1 style="font-size: 1.5rem">No. 340368041863145</h1>
+        <h1 style="font-size: 1.5rem">No. 340368041860003145</h1>
       </div>
 
       <div class="no-kk">
@@ -87,15 +87,15 @@
           <th>Jenis Pekerjaan</th>
         </tr>
         <tr align="center">
-          <td></td>
-          <td>(1)</td>
-          <td>(2)</td>
-          <td>(3)</td>
-          <td>(4)</td>
-          <td>(5)</td>
-          <td>(6)</td>
-          <td>(7)</td>
-          <td>(8)</td>
+          <th></th>
+          <th>(1)</th>
+          <th>(2)</th>
+          <th>(3)</th>
+          <th>(4)</th>
+          <th>(5)</th>
+          <th>(6)</th>
+          <th>(7)</th>
+          <th>(8)</th>
         </tr>
       </thead>
       <tbody>
@@ -309,7 +309,7 @@
         </tr>
       </table>
 
-      <table class="tandatangan">
+      <table class="sign1">
         <tr>
           <td valign="top"><h6>KEPALA KELUARGA</h6></td>
         </tr>
@@ -319,11 +319,11 @@
           </td>
         </tr>
         <tr>
-          <td valign="top"><p>Tanda Tangan/Cap Jempol</p></td>
+          <td valign="top"><small>Tanda Tangan/Cap Jempol</small></td>
         </tr>
       </table>
 
-      <table class="stampel">
+      <table class="sign2">
         <tr>
           <td valign="top">
             <h6>KEPALA DINAS KEPENDUDUKAN DAN PENCATATAN SIPIL</h6>
