set tbody text align to left

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <td>IRLANDIA UTARA</td>
           <td>21-12-287</td>
           <td>OLD GODS OF THE FOREST</td>
-          <td>SEKOLAH MENENGAH ATAS</td>
+          <td>SLTA/Sederajat</td>
           <td>SISWA</td>
         </tr>
         <tr>
@@ -162,7 +162,7 @@
           <td>IRLANDIA UTARA</td>
           <td>02-07-288</td>
           <td>OLD GODS OF THE FOREST</td>
-          <td>SEKOLAH MENENGAH ATAS</td>
+          <td>SLTP/Sederajat</td>
           <td>SISWA</td>
         </tr>
         <tr>
@@ -173,7 +173,7 @@
           <td>IRLANDIA UTARA</td>
           <td>12-05-292</td>
           <td>OLD GODS OF THE FOREST</td>
-          <td>SEKOLAH MENENGAH PERTAMA</td>
+          <td>SLTP/Sederajat</td>
           <td>SISWA</td>
         </tr>
       </tbody>
